Primo commit (solo notebook trading con media pesata forzata)

--- a/Trading con media pesata forzata.ipynb
+++ b/Trading con media pesata forzata.ipynb
@@ -7346,7 +7346,12 @@
       "Punteggio rendimento medio: 0.12959306458073297\n",
       "Punteggio rendimento medio migliore trovato finora: 0.13569520429293352 con i parametri (0.9, True, 0.5, 0, 0.2, 0.01, True, True, 7, 50) e fattore rendimento medio 1.5789512900367046 (combinazione numero 1274)\n",
       "\n",
-      "Sto calcolando la combinazione 1434/2304 ((0.9, True, 0.5, 0.01, 0.2, 0.01, False, True, 14, 75))...\n"
+      "Sto calcolando la combinazione 1434/2304 ((0.9, True, 0.5, 0.01, 0.2, 0.01, False, True, 14, 75))...\n",
+      "Fattore Rendimento medio: 1.4862386770704443\n",
+      "Punteggio rendimento medio: 0.12908197372384062\n",
+      "Punteggio rendimento medio migliore trovato finora: 0.13569520429293352 con i parametri (0.9, True, 0.5, 0, 0.2, 0.01, True, True, 7, 50) e fattore rendimento medio 1.5789512900367046 (combinazione numero 1274)\n",
+      "\n",
+      "Sto calcolando la combinazione 1435/2304 ((0.9, True, 0.5, 0.01, 0.2, 0.01, False, False, 7, 25))...\n"
      ]
     }
    ],
