Aggiunti nuovi notebook

--- a/Trading con compravendita continua.ipynb
+++ b/Trading con compravendita continua.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
        "[3508 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,159 +180,6 @@
     "# dati['Timestamp'] = dati['Timestamp'].dt.strftime('%Y-%m-%d %H')\n",
     "# dati['Timestamp'] = pd.to_datetime(dati['Timestamp'], format='%Y-%m-%d %H')\n",
     "# dati"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Timestamp</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-02-29</td>\n",
-       "      <td>7798.025879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-03-01</td>\n",
-       "      <td>7748.164551</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-03-02</td>\n",
-       "      <td>7959.358398</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-03-03</td>\n",
-       "      <td>7862.485352</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-03-04</td>\n",
-       "      <td>7861.055176</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>181</th>\n",
-       "      <td>2020-08-28</td>\n",
-       "      <td>9695.468750</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>182</th>\n",
-       "      <td>2020-08-29</td>\n",
-       "      <td>9664.351562</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183</th>\n",
-       "      <td>2020-08-30</td>\n",
-       "      <td>9824.922852</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>184</th>\n",
-       "      <td>2020-08-31</td>\n",
-       "      <td>9785.023438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>2020-09-01</td>\n",
-       "      <td>10038.563477</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>186 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     Timestamp         Price\n",
-       "0   2020-02-29   7798.025879\n",
-       "1   2020-03-01   7748.164551\n",
-       "2   2020-03-02   7959.358398\n",
-       "3   2020-03-03   7862.485352\n",
-       "4   2020-03-04   7861.055176\n",
-       "..         ...           ...\n",
-       "181 2020-08-28   9695.468750\n",
-       "182 2020-08-29   9664.351562\n",
-       "183 2020-08-30   9824.922852\n",
-       "184 2020-08-31   9785.023438\n",
-       "185 2020-09-01  10038.563477\n",
-       "\n",
-       "[186 rows x 2 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_inizio = '2020-02-29'\n",
-    "data_fine = '2020-09-01'\n",
-    "indice_inizio = dati[dati['Timestamp'] == data_inizio].index[0]\n",
-    "indice_fine = dati[dati['Timestamp'] == data_fine].index[0]\n",
-    "dati = dati[indice_inizio:indice_fine + 1].reset_index(drop=True)\n",
-    "dati"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_inizio = '2023-06-01 00'\n",
-    "# data_fine = '2023-12-01 00'\n",
-    "# indice_inizio = dati[dati['Timestamp'] == data_inizio].index[0]\n",
-    "# indice_fine = dati[dati['Timestamp'] == data_fine].index[0]\n",
-    "# dati = dati[indice_inizio:indice_fine + 1].reset_index(drop=True)\n",
-    "# dati"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Eventuale cambio dati"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def calcola_prezzo(t):\n",
-    "    return dati['Price'][t] #1000 - t + 100 * math.sin(2*math.pi * t / 4)"
    ]
   },
   {
@@ -449,13 +296,166 @@
     }
    ],
    "source": [
+    "data_inizio = '2020-02-29'\n",
+    "data_fine = '2020-09-01'\n",
+    "indice_inizio = dati[dati['Timestamp'] == data_inizio].index[0]\n",
+    "indice_fine = dati[dati['Timestamp'] == data_fine].index[0]\n",
+    "dati = dati[indice_inizio:indice_fine + 1].reset_index(drop=True)\n",
+    "dati"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data_inizio = '2023-06-01 00'\n",
+    "# data_fine = '2023-12-01 00'\n",
+    "# indice_inizio = dati[dati['Timestamp'] == data_inizio].index[0]\n",
+    "# indice_fine = dati[dati['Timestamp'] == data_fine].index[0]\n",
+    "# dati = dati[indice_inizio:indice_fine + 1].reset_index(drop=True)\n",
+    "# dati"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Eventuale cambio dati"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcola_prezzo(t):\n",
+    "    return dati['Price'][t] #1000 - t + 100 * math.sin(2*math.pi * t / 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>7798.025879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-01</td>\n",
+       "      <td>7748.164551</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-02</td>\n",
+       "      <td>7959.358398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-03</td>\n",
+       "      <td>7862.485352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-04</td>\n",
+       "      <td>7861.055176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>181</th>\n",
+       "      <td>2020-08-28</td>\n",
+       "      <td>9695.468750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>182</th>\n",
+       "      <td>2020-08-29</td>\n",
+       "      <td>9664.351562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>183</th>\n",
+       "      <td>2020-08-30</td>\n",
+       "      <td>9824.922852</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>184</th>\n",
+       "      <td>2020-08-31</td>\n",
+       "      <td>9785.023438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>185</th>\n",
+       "      <td>2020-09-01</td>\n",
+       "      <td>10038.563477</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>186 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Timestamp         Price\n",
+       "0   2020-02-29   7798.025879\n",
+       "1   2020-03-01   7748.164551\n",
+       "2   2020-03-02   7959.358398\n",
+       "3   2020-03-03   7862.485352\n",
+       "4   2020-03-04   7861.055176\n",
+       "..         ...           ...\n",
+       "181 2020-08-28   9695.468750\n",
+       "182 2020-08-29   9664.351562\n",
+       "183 2020-08-30   9824.922852\n",
+       "184 2020-08-31   9785.023438\n",
+       "185 2020-09-01  10038.563477\n",
+       "\n",
+       "[186 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "dati['Price'] = dati.index.map(calcola_prezzo)\n",
     "dati"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +759,7 @@
        " 1265.0735404514967]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,6 +795,26 @@
     "                                       perc_commissione_acquisto, perc_commissione_vendita)\n",
     "\n",
     "valori_portafoglio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2650861913134097"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "valori_portafoglio[-1] / valori_portafoglio[0]"
    ]
   }
  ],
