Creato Studio generalizzabilità strategia per cluster

--- a/Trading a potenze con matrice.ipynb
+++ b/Trading a potenze con matrice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,14 +48,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
+      "[*********************100%***********************]  1 of 1 completed"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simula_trading(dati, righe, colonne, matrice_liquidità, matrice_bitcoin, exception_cells, giorni_ridistribuzione, base_acquisto, base_vendita, soglia_vendita, max_exp_acquisto, max_exp_vendita, riferimento_iniziale_acquisto, compra_pure, liquidità_iniziale, bitcoin_iniziali):\n",
+    "def trading_potenze_con_matrice(dati, righe, colonne, matrice_liquidità, matrice_bitcoin, exception_cells, giorni_ridistribuzione, base_acquisto, base_vendita, soglia_vendita, max_exp_acquisto, max_exp_vendita, riferimento_iniziale_acquisto, compra_pure, liquidità_iniziale, bitcoin_iniziali):\n",
     "    if not matrice_liquidità[0]:\n",
     "        matrice_liquidità = np.full((righe, colonne), 1 / (righe * colonne))\n",
     "\n",
@@ -294,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +566,7 @@
        "[183 rows x 12 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,13 +591,13 @@
     "riferimento_iniziale_acquisto = True # Se è True, le percentuali non vengono riferite alla liquidità posseduta in quel momento, ma alla liquidità posseduta subito dopo l'ultima ridistribuzione (quindi potrebbe risultare anche che bisogna spendere più di quel che si ha, e in quel caso si spende tutto solo se compra_pure = True, altrimenti non si spende niente)\n",
     "compra_pure = False # Utile solo se riferimento_iniziale_acquisto è True, altrimenti il suo valore è indifferente\n",
     "\n",
-    "df_transazioni = simula_trading(dati, righe, colonne, matrice_liquidità, matrice_bitcoin, exception_cells, giorni_ridistribuzione, base_acquisto, base_vendita, soglia_vendita, max_exp_acquisto, max_exp_vendita, riferimento_iniziale_acquisto, compra_pure, liquidità_iniziale, bitcoin_iniziali)\n",
+    "df_transazioni = trading_potenze_con_matrice(dati, righe, colonne, matrice_liquidità, matrice_bitcoin, exception_cells, giorni_ridistribuzione, base_acquisto, base_vendita, soglia_vendita, max_exp_acquisto, max_exp_vendita, riferimento_iniziale_acquisto, compra_pure, liquidità_iniziale, bitcoin_iniziali)\n",
     "df_transazioni"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -601,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -663,20 +670,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Media max drawdown: 20.49%\n",
-      "Media volatilità: 0.31\n",
-      "Media Sharpe ratio: 1.99\n",
-      "Media Sortino ratio: 3.95\n",
-      "Media Calmar ratio: 2.50\n",
-      "Media Profit factor: 2.29\n",
-      "Media PnL per trade: 5.62\n"
+      "Max drawdown: 20.49%\n",
+      "Volatilità annualizzata: 0.31\n",
+      "Sharpe ratio annualizzato: 1.99\n",
+      "Sortino ratio annualizzato: 3.95\n",
+      "Calmar ratio: 2.50\n",
+      "Profit factor: 2.29\n",
+      "PnL per trade: 5.62\n"
      ]
     }
    ],
@@ -685,27 +692,27 @@
     "list_transactions.append([df_transazioni['valore_totale_portafoglio'], df_transazioni['prezzo'], df_transazioni['bitcoin']])\n",
     "\n",
     "# Calcolo delle metriche di performance per ogni dataset usando le funzioni della libreria 'mdp'\n",
-    "media_max_drawdown = np.mean([mdp.max_drawdown(trans[0]) for trans in list_transactions])\n",
-    "media_volatilita = np.mean([mdp.volatility(trans[0]) for trans in list_transactions])\n",
-    "media_sharpe_ratio = np.mean([mdp.sharpe_ratio(trans[0]) for trans in list_transactions])\n",
-    "media_sortino_ratio = np.mean([mdp.sortino_ratio(trans[0]) for trans in list_transactions])\n",
-    "media_calmar_ratio = np.mean([mdp.calmar_ratio(trans[0]) for trans in list_transactions])\n",
-    "media_profit_factor = np.mean([mdp.profit_factor(trans[1], trans[2]) for trans in list_transactions])\n",
-    "media_pnl_per_trade = np.mean([np.mean(mdp.calcola_pnl(trans[1], trans[2])) for trans in list_transactions])\n",
+    "media_max_drawdown = mdp.max_drawdown(df_transazioni['valore_totale_portafoglio'])\n",
+    "media_volatilita = mdp.volatility(df_transazioni['valore_totale_portafoglio'])\n",
+    "media_sharpe_ratio = mdp.sharpe_ratio(df_transazioni['valore_totale_portafoglio'])\n",
+    "media_sortino_ratio = mdp.sortino_ratio(df_transazioni['valore_totale_portafoglio'])\n",
+    "media_calmar_ratio = mdp.calmar_ratio(df_transazioni['valore_totale_portafoglio'])\n",
+    "media_profit_factor = mdp.profit_factor(df_transazioni['prezzo'], df_transazioni['bitcoin'])\n",
+    "media_pnl_per_trade = mdp.calcola_pnl(df_transazioni['prezzo'], df_transazioni['bitcoin'])\n",
     "\n",
     "# Stampa delle metriche calcolate\n",
-    "print(f'Media max drawdown: {media_max_drawdown:.2f}%')\n",
-    "print(f'Media volatilità: {media_volatilita:.2f}')\n",
-    "print(f'Media Sharpe ratio: {media_sharpe_ratio:.2f}')\n",
-    "print(f'Media Sortino ratio: {media_sortino_ratio:.2f}')\n",
-    "print(f'Media Calmar ratio: {media_calmar_ratio:.2f}')\n",
-    "print(f'Media Profit factor: {media_profit_factor:.2f}')\n",
-    "print(f'Media PnL per trade: {media_pnl_per_trade:.2f}')"
+    "print(f'Max drawdown: {media_max_drawdown:.2f}%')\n",
+    "print(f'Volatilità annualizzata: {media_volatilita:.2f}')\n",
+    "print(f'Sharpe ratio annualizzato: {media_sharpe_ratio:.2f}')\n",
+    "print(f'Sortino ratio annualizzato: {media_sortino_ratio:.2f}')\n",
+    "print(f'Calmar ratio: {media_calmar_ratio:.2f}')\n",
+    "print(f'Profit factor: {media_profit_factor:.2f}')\n",
+    "print(f'PnL per trade: {media_pnl_per_trade:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -762,15 +769,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_444144\\1732262686.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_78152\\1732262686.py:8: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  if lista_prezzi[i] < lista_prezzi[i + 1] and not comprato and capitale >= min_acquisto:\n",
-      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_444144\\1732262686.py:9: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_78152\\1732262686.py:9: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  bitcoin_acquistati = (capitale * (1 - perc_commissione_acquisto)) / lista_prezzi[i]\n",
-      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_444144\\1732262686.py:15: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_78152\\1732262686.py:15: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  elif lista_prezzi[i] > lista_prezzi[i + 1] and comprato and bitcoin * lista_prezzi[i] >= min_vendita:\n",
-      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_444144\\1732262686.py:16: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_78152\\1732262686.py:16: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  capitale_vendita = bitcoin * lista_prezzi[i] * (1 - perc_commissione_vendita)\n",
-      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_444144\\1732262686.py:29: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Alessandro\\AppData\\Local\\Temp\\ipykernel_78152\\1732262686.py:29: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  valore_iniziale = capitale_iniziale + bitcoin_iniziali * lista_prezzi[0]\n"
      ]
     }
@@ -783,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
