Aggiunto in Calcolatore plusvalenze previsioni in base a nuove righe

--- a/Calcolatore plusvalenze.ipynb
+++ b/Calcolatore plusvalenze.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importzione librerie"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calcololatore plusvalenze per ogni pair e plusvalenze totali per valuta"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +56,6 @@
     "        row[\"Plusvalenze\"] = 0  # Default plusvalenza to 0\n",
     "\n",
     "        volume = float(row[\"volume\"])  # Crypto amount\n",
-    "        amount = float(row[\"amount\"])  # Currency amount (EUR, USDC, etc.)\n",
     "        rate = float(row[\"rate\"])  # Price per crypto unit\n",
     "\n",
     "        if row[\"side\"] == \"BUY\":\n",
@@ -85,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +123,7 @@
    ],
    "source": [
     "# Esempio di utilizzo\n",
-    "input_file_path = r\"C:\\Users\\Alessandro\\Downloads\\Report ordini YP 20 11 24.csv\"  # Nome del file CSV di input\n",
+    "input_file_path = r\"C:\\Users\\Alessandro\\Downloads\\Report ordini YP.csv\"  # Nome del file CSV di input\n",
     "\n",
     "file = pd.read_csv(input_file_path)\n",
     "\n",
@@ -170,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +391,7 @@
        "81                EUR  SELL  2024-11-17T10:01:08.357Z       160.79  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,6 +400,348 @@
     "file_btc = pd.read_csv(r'C:\\Users\\Alessandro\\Downloads\\BTC_EUR_plusvalenze.csv')\n",
     "file_btc_sell = file_btc[file_btc[\"side\"] == \"SELL\"]\n",
     "file_btc_sell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Previsione plusvalenze totali con righe in più a scelta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definisci le nuove righe (puoi aggiungere più righe come desideri)\n",
+    "new_rows = [\n",
+    "    {\n",
+    "        \"base\": \"BTC\",  # Criptovaluta\n",
+    "        \"quote\": \"EUR\",  # Valuta di scambio\n",
+    "        \"side\": \"SELL\",  # Operazione: BUY o SELL\n",
+    "        \"volume\": 0.0005,  # Quantità di criptovaluta\n",
+    "        \"rate\": 120000,  # Prezzo unitario\n",
+    "    },\n",
+    "    {\n",
+    "        \"base\": \"RNDR\",\n",
+    "        \"quote\": \"EUR\",\n",
+    "        \"side\": \"BUY\",\n",
+    "        \"volume\": 10,\n",
+    "        \"rate\": 25,\n",
+    "    },\n",
+    "]\n",
+    "new_rows_df = pd.DataFrame(new_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>base</th>\n",
+       "      <th>quote</th>\n",
+       "      <th>amount</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>rate</th>\n",
+       "      <th>brokerage</th>\n",
+       "      <th>brokerage_currency</th>\n",
+       "      <th>side</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60854962.0</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>9.766884</td>\n",
+       "      <td>0.00017</td>\n",
+       "      <td>57452.26</td>\n",
+       "      <td>3.400000e-07</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>2024-03-01T11:00:01.597Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60859098.0</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>9.720229</td>\n",
+       "      <td>0.00017</td>\n",
+       "      <td>57177.82</td>\n",
+       "      <td>3.400000e-07</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>2024-03-02T09:51:33.437Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60863264.0</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>12.732905</td>\n",
+       "      <td>0.00022</td>\n",
+       "      <td>57876.84</td>\n",
+       "      <td>4.400000e-07</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>2024-03-03T17:02:04.617Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60866072.0</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>6.012000</td>\n",
+       "      <td>0.00010</td>\n",
+       "      <td>60120.00</td>\n",
+       "      <td>2.000000e-07</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>2024-03-04T11:01:48.373Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60872282.0</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>9.907230</td>\n",
+       "      <td>0.00016</td>\n",
+       "      <td>61920.19</td>\n",
+       "      <td>4.800000e-07</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>2024-03-05T12:15:41.153Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>318</th>\n",
+       "      <td>61947901.0</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>12.768463</td>\n",
+       "      <td>0.00430</td>\n",
+       "      <td>2969.41</td>\n",
+       "      <td>1.290000e-05</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>2024-11-17T10:10:33.56Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319</th>\n",
+       "      <td>61947902.0</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>72.192627</td>\n",
+       "      <td>0.02430</td>\n",
+       "      <td>2970.89</td>\n",
+       "      <td>7.290000e-05</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>2024-11-17T10:10:33.56Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>320</th>\n",
+       "      <td>61947903.0</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>381.271676</td>\n",
+       "      <td>0.12830</td>\n",
+       "      <td>2971.72</td>\n",
+       "      <td>3.849000e-04</td>\n",
+       "      <td>ETH</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>2024-11-17T10:10:33.56Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>321</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BTC</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.00050</td>\n",
+       "      <td>120000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SELL</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>322</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>RNDR</td>\n",
+       "      <td>EUR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.00000</td>\n",
+       "      <td>25.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BUY</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>323 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             id  base quote      amount    volume       rate     brokerage  \\\n",
+       "0    60854962.0   BTC   EUR    9.766884   0.00017   57452.26  3.400000e-07   \n",
+       "1    60859098.0   BTC   EUR    9.720229   0.00017   57177.82  3.400000e-07   \n",
+       "2    60863264.0   BTC   EUR   12.732905   0.00022   57876.84  4.400000e-07   \n",
+       "3    60866072.0   BTC   EUR    6.012000   0.00010   60120.00  2.000000e-07   \n",
+       "4    60872282.0   BTC   EUR    9.907230   0.00016   61920.19  4.800000e-07   \n",
+       "..          ...   ...   ...         ...       ...        ...           ...   \n",
+       "318  61947901.0   ETH   EUR   12.768463   0.00430    2969.41  1.290000e-05   \n",
+       "319  61947902.0   ETH   EUR   72.192627   0.02430    2970.89  7.290000e-05   \n",
+       "320  61947903.0   ETH   EUR  381.271676   0.12830    2971.72  3.849000e-04   \n",
+       "321         NaN   BTC   EUR         NaN   0.00050  120000.00           NaN   \n",
+       "322         NaN  RNDR   EUR         NaN  10.00000      25.00           NaN   \n",
+       "\n",
+       "    brokerage_currency  side                      date  \n",
+       "0                  BTC   BUY  2024-03-01T11:00:01.597Z  \n",
+       "1                  BTC   BUY  2024-03-02T09:51:33.437Z  \n",
+       "2                  BTC   BUY  2024-03-03T17:02:04.617Z  \n",
+       "3                  BTC   BUY  2024-03-04T11:01:48.373Z  \n",
+       "4                  BTC   BUY  2024-03-05T12:15:41.153Z  \n",
+       "..                 ...   ...                       ...  \n",
+       "318                ETH   BUY   2024-11-17T10:10:33.56Z  \n",
+       "319                ETH   BUY   2024-11-17T10:10:33.56Z  \n",
+       "320                ETH   BUY   2024-11-17T10:10:33.56Z  \n",
+       "321                NaN  SELL                       NaN  \n",
+       "322                NaN   BUY                       NaN  \n",
+       "\n",
+       "[323 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df = pd.concat([file, new_rows_df], ignore_index=True)\n",
+    "combined_df_path = r'C:\\Users\\Alessandro\\Downloads\\combined_df_future.csv'\n",
+    "combined_df.to_csv(combined_df_path, index=False)\n",
+    "combined_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Totale plusvalenze generate per BTC-EUR: 282.61\n",
+      "Totale plusvalenze generate per RNDR/RENDER-EUR: 19.77\n",
+      "Totale plusvalenze generate per LINK-EUR: 0.18\n",
+      "Totale plusvalenze generate per SEI-EUR: 0.55\n",
+      "Totale plusvalenze generate per TIA-EUR: 1.22\n",
+      "Totale plusvalenze generate per IMX-EUR: 1.21\n",
+      "Totale plusvalenze generate per FET-EUR: 8.08\n",
+      "Totale plusvalenze generate per ETH-EUR: 0\n",
+      "Totale plusvalenze generate per USDC-EUR: 0\n",
+      "Totale plusvalenze generate per FET-USDC: 0\n",
+      "\n",
+      "Totale plusvalenze generate in EUR: 313.61\n",
+      "Totale plusvalenze generate in USDC: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Configurazione delle alternative names\n",
+    "alternative_names = [\n",
+    "    ['RNDR', 'RENDER']\n",
+    "]\n",
+    "\n",
+    "total_gains = 0\n",
+    "gains_by_quote = {}  # Dizionario per tracciare i guadagni totali per ogni quote\n",
+    "\n",
+    "# Trova tutte le valute base e di scambio\n",
+    "unique_cryptos = file[\"base\"].unique()\n",
+    "unique_quotes = file[\"quote\"].unique()\n",
+    "\n",
+    "for quote_currency in unique_quotes:\n",
+    "    processed_groups = set()  # Per tracciare i gruppi già calcolati\n",
+    "    total_gains_for_quote = 0  # Per tracciare i guadagni totali di questa quote\n",
+    "\n",
+    "    for crypto in unique_cryptos:\n",
+    "        # Trova il gruppo equivalente per la crypto\n",
+    "        relevant_group = None\n",
+    "        for group in alternative_names:\n",
+    "            if crypto in group:\n",
+    "                relevant_group = group\n",
+    "                break\n",
+    "\n",
+    "        # Determina il gruppo da utilizzare\n",
+    "        if relevant_group:\n",
+    "            group_key = tuple(sorted(relevant_group))\n",
+    "            if group_key in processed_groups:\n",
+    "                continue  # Evita di calcolare di nuovo lo stesso gruppo\n",
+    "            processed_groups.add(group_key)\n",
+    "            crypto_symbols = relevant_group\n",
+    "        else:\n",
+    "            crypto_symbols = [crypto]  # Se non è in un gruppo, usa il nome unico\n",
+    "\n",
+    "        # Calcola le plusvalenze\n",
+    "        output_file_path = rf\"C:\\Users\\Alessandro\\Downloads\\{'_'.join(crypto_symbols)}_{quote_currency}_plusvalenze_future.csv\"\n",
+    "        total_gains_crypto = calculate_capital_gains(\n",
+    "            combined_df_path, output_file_path, crypto_symbols=crypto_symbols, quote_currency=quote_currency\n",
+    "        )\n",
+    "\n",
+    "        # Aggiungi al totale delle plusvalenze solo se ci sono transazioni\n",
+    "        if total_gains_crypto > 0:\n",
+    "            total_gains_for_quote += total_gains_crypto\n",
+    "            total_gains += total_gains_crypto\n",
+    "\n",
+    "    # Salva i guadagni totali per questa quote\n",
+    "    gains_by_quote[quote_currency] = round(total_gains_for_quote, 2)\n",
+    "\n",
+    "print('')\n",
+    "# Stampa i totali per ogni valuta di scambio\n",
+    "for quote_currency, gains in gains_by_quote.items():\n",
+    "    print(f\"Totale plusvalenze generate in {quote_currency}: {gains}\")"
    ]
   }
  ],
